# qt6-skeleton

./: .gitignore  .gitmodules  Makefile  README.md
rust/: Cargo.toml  build.rs
rust/src/: cxxqt_app.rs  lib.rs
scripts/: adb-run.sh  generate_q_static_plugin_import.sh  package-appimage.sh  package-debian.sh  qmake-build.sh
src/: main.cc
src/ui/: main.qml
ui/: main.qml
